# hzltfw

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  EVIDENCE_HANDOFF.md  EVIDENCE_HANDOFF.zh-CN.md  LICENSE  PLUGIN_CONTACT.md  PLUGIN_TASKS.md  PLUGIN_TASKS.zh-CN.md  README.md  README.zh-CN.md  SPEC.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  EVIDENCE_HANDOFF.md  EVIDENCE_HANDOFF.zh-CN.md  EXTERNAL_TOOLS.md  EXTERNAL_TOOLS.zh-CN.md  PLUGIN_CONTACT.md  PLUGIN_CONTACT.zh-CN.md  PLUGIN_TASKS.md  PLUGIN_TASKS.zh-CN.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES.zh-CN.md  SPEC.md
site/: index.html  styles.css
src/hzltfw/: __init__.py  _engineio_patch.py  app.py  cli.py
src/hzltfw/core/: __init__.py  config.py  database.py  exceptions.py  external_probe.py  external_tools.py  handoff.py  models.py  plugin.py  records.py  report.py  runner.py  scanner.py  workspace.py
src/hzltfw/plugins/: archive_index.py  external_forensics.py  file_type.py  hash_manifest.py  keyword_search.py  metadata_extract.py
src/hzltfw/ui/: __init__.py  artifact_views.py
src/hzltfw/ui/pages/: __init__.py  analysis.py  artifacts.py  cases.py  common.py  evidence.py  handoff.py  reports.py
src/hzltfw/utils/: hashing.py  i18n.py  timestamps.py
tests/: test_engineio_patch.py  test_external_tools.py  test_handoff.py  test_smoke.py
