[project]
name = "hzltfw"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    { name = "LyCecilion", email = "LyCecilion@outlook.com" }
]
maintainers = [
    { name = "LyCecilion", email = "LyCecilion@outlook.com" }
]
description = "Hazelita Forensics Workbench"
readme = "README.md"
license = "MIT"
dependencies = [
    "nicegui>=2.0.0",
    "pillow>=10.0.0",
    "puremagic>=1.28",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "sqlmodel>=0.0.22",
]

[project.scripts]
hzltfw = "hzltfw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hzltfw"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["FAST", "E", "W", "F", "I", "UP", "B", "SIM", "N", "PL", "FURB", "TRY"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
